// Use these for links to issue and pulls. Note issues and pulls redirect one to
// each other on Github, so don't worry too much on using the right prefix.
// :issue: https://github.com/elastic/elasticsearch/issues/
// :pull: https://github.com/elastic/elasticsearch/pull/

= Elasticsearch Release Notes

== Elasticsearch 7.0.0

=== Breaking Changes

=== Deprecations

=== New Features 

=== Enhancements

=== Bug Fixes

=== Regressions

=== Known Issues

== Elasticsearch version 6.4.0

=== New Features

=== Enhancements

=== Bug Fixes

=== Regressions

=== Known Issues

== Elasticsearch version 6.3.0

=== New Features

=== Enhancements

=== Bug Fixes

=== Regressions

=== Known Issues